fixes to search bar overlap with page layout

--- a/styles/sass/partials/page/_page-layout.scss
+++ b/styles/sass/partials/page/_page-layout.scss
@@ -5,7 +5,7 @@ $padding-top: 20px;
 	overflow: hidden;
 	clear: both;
 	
-	margin: 0 auto;
+	margin: 80px auto 0 auto !important;
 	max-width: $desktop-breakpoint;
 	min-width: 0;
 
@@ -66,6 +66,12 @@ $padding-top: 20px;
 		width: ($left-col-width + $right-col-width + $right-col-right-gutter);
 		margin: 0 auto;
 	}
+
+	body.home {
+		.page-layout {
+			margin-top: 0;
+		}		
+	}	
 
 	body.neighborhood, body.category-details {
 		background-image: url(#{$img-path}neighborhoods/19040004_source.jpg);
